[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/lightblue_equirectangular.png" type="Texture" id=1]
[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://FPS tutorial/Main_Menu.gd" type="Script" id=3]
[ext_resource path="res://Audio/Glory.ogg" type="AudioStream" id=5]

[sub_resource type="PanoramaSky" id=1]
radiance_size = 0
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
fog_height_min = 0.0
fog_height_max = 100.0
tonemap_mode = 3
ssao_quality = 0
dof_blur_far_amount = 0.08
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/5 = false
glow_intensity = 1.0
glow_strength = 1.1
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="Animation" id=3]
resource_name = "Background_Animation"
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Main_Menu_Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 40, 40, 40 ), Vector3( 80, 80, 80 ), Vector3( 120, 120, 120 ), Vector3( 160, 160, 160 ), Vector3( 200, 200, 200 ), Vector3( 240, 240, 240 ), Vector3( 280, 280, 280 ), Vector3( 320, 320, 320 ), Vector3( 360, 360, 360 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.199219, 0.199219, 0.199219, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0535583, 0.064363, 0.152344, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.10803
margin_bottom = -1.10803
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Animation" type="Spatial" parent="."]

[node name="World_Environment" type="WorldEnvironment" parent="Background_Animation"]
environment = SubResource( 2 )

[node name="Main_Menu_Camera" type="Camera" parent="Background_Animation"]

[node name="Animation_Player" type="AnimationPlayer" parent="Background_Animation"]
autoplay = "Background_Animation"
playback_speed = 0.18
anims/Background_Animation = SubResource( 3 )

[node name="Start_Menu" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 330.0
margin_bottom = 589.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Label" type="Label" parent="Start_Menu"]
margin_left = 20.0
margin_top = 10.0
margin_right = 227.0
margin_bottom = 77.0
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Godot 3
FPS Tutorial"
align = 1
valign = 1

[node name="Button_Start" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.544
margin_top = -307.768
margin_right = 157.456
margin_bottom = -257.768
custom_fonts/font = SubResource( 5 )
text = "Solo Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Host" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -251.292
margin_right = 155.0
margin_bottom = -201.292
custom_fonts/font = SubResource( 5 )
text = "Host game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Quit" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -70.0
margin_right = 155.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="StatusOk" type="Label" parent="Start_Menu"]
margin_left = 18.9474
margin_top = 108.421
margin_right = 58.9474
margin_bottom = 122.421
rect_scale = Vector2( 7.61666, 3.35454 )

[node name="StatusFail" type="Label" parent="Start_Menu"]
margin_left = 3.1579
margin_top = 173.684
margin_right = 43.1579
margin_bottom = 187.684
rect_scale = Vector2( 8.01567, 4.59893 )

[node name="Address" type="LineEdit" parent="Start_Menu"]
margin_left = -148.0
margin_top = 177.0
margin_right = -39.0
margin_bottom = 201.0
rect_rotation = -0.222553
rect_scale = Vector2( 2.84032, 2.94511 )
rect_pivot_offset = Vector2( -82.6931, 0 )
text = "127.0.0.1"
max_length = 10

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
